--- a/package.json
+++ b/package.json
@@ -1,15 +1,65 @@
 {
-  "name": "modules-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+	"name": "modules-next",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"next": "12.1.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"@styled-icons/boxicons-regular": "^10.38.0",
+		"@styled-icons/foundation": "^10.34.0",
+		"@styled-icons/material": "^10.34.0",
+		"@udecode/plate-alignment": "^11.2.1",
+		"@udecode/plate-autoformat": "^11.2.1",
+		"@udecode/plate-basic-elements": "^11.2.1",
+		"@udecode/plate-basic-marks": "^11.2.1",
+		"@udecode/plate-block-quote": "^11.2.1",
+		"@udecode/plate-break": "^11.2.1",
+		"@udecode/plate-code-block": "^11.2.1",
+		"@udecode/plate-common": "^7.0.2",
+		"@udecode/plate-core": "^11.2.1",
+		"@udecode/plate-find-replace": "^11.2.1",
+		"@udecode/plate-font": "^11.2.1",
+		"@udecode/plate-heading": "^11.2.1",
+		"@udecode/plate-highlight": "^11.2.1",
+		"@udecode/plate-horizontal-rule": "^11.2.1",
+		"@udecode/plate-image": "^11.2.1",
+		"@udecode/plate-indent": "^11.2.1",
+		"@udecode/plate-kbd": "^11.2.1",
+		"@udecode/plate-link": "^11.2.1",
+		"@udecode/plate-list": "^11.2.1",
+		"@udecode/plate-media-embed": "^11.2.1",
+		"@udecode/plate-mention": "^11.2.1",
+		"@udecode/plate-node-id": "^11.2.1",
+		"@udecode/plate-normalizers": "^11.2.1",
+		"@udecode/plate-paragraph": "^11.2.1",
+		"@udecode/plate-reset-node": "^11.2.1",
+		"@udecode/plate-select": "^11.2.1",
+		"@udecode/plate-serializer-csv": "^11.3.1",
+		"@udecode/plate-serializer-md": "^11.2.1",
+		"@udecode/plate-styled-components": "^11.2.1",
+		"@udecode/plate-table": "^11.3.1",
+		"@udecode/plate-trailing-block": "^11.2.1",
+		"@udecode/plate-ui": "^13.0.0",
+		"@udecode/plate-ui-alignment": "^11.2.1",
+		"@udecode/plate-ui-block-quote": "^11.2.1",
+		"@udecode/plate-ui-code-block": "^11.2.1",
+		"@udecode/plate-ui-combobox": "^11.2.1",
+		"@udecode/plate-ui-find-replace": "^11.2.1",
+		"@udecode/plate-ui-font": "^11.2.1",
+		"@udecode/plate-ui-horizontal-rule": "^11.2.1",
+		"@udecode/plate-ui-image": "^11.2.1",
+		"@udecode/plate-ui-link": "^11.2.1",
+		"@udecode/plate-ui-list": "^11.2.1",
+		"@udecode/plate-ui-media-embed": "^11.2.1",
+		"@udecode/plate-ui-mention": "^11.2.1",
+		"@udecode/plate-ui-placeholder": "^11.2.1",
+		"@udecode/plate-ui-table": "^11.3.1",
+		"@udecode/plate-ui-toolbar": "^11.2.1"
+	}
 }
