--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
 		"build": "next build",
 		"start": "next start"
 	},
+	"overrides": {
+		"react-dnd": "^15.0.0",
+		"react-dnd-html5-backend": "^15.0.0"
+	},
 	"dependencies": {
 		"next": "12.1.6",
 		"react": "18.2.0",
